Changes in version 0.2.0.3-alpha - 2007-??-??
  o Minor features:
    - Create listener connections before we setuid to the configured User and
      Group.  This way, you can choose port values under 1024, start Tor as
      root, and have Tor bind those ports before it changes to another UID.
    - tor-gencert creates all files as readable to the file creator only, and
      write-protects the authority identity key.
    - New ConstrainedSockets option to set SO_SNDBUF and SO_RCVBUF on TCP
      sockets.  (Patch from coderman.)

  o Minor features (directory authority):
    - Fail quickly and (relatively) harmlessly if we generate a network
      status document that is somehow malformed.

  o Minor features (controller):
    - Add a SOURCE_ADDR field to STREAM NEW events so that controllers can
      match requests to applications. (Patch from Robert Hogan.)
    - Report address and port correctly on connections to DNSPort. (Patch
      from Robert Hogan.)
    - Add a RESOLVE command to launch hostname lookups. (Original patch
      from Robert Hogan.)
    - Add GETINFO status/enough-dir-info to let controllers tell whether
      Tor has downloaded sufficient directory information. (Patch from Tup.)
    - You can now use the ControlSocket option to tell Tor to listen for
      controller connections on Unix domain sockets on systems that support
      them.  (Patch from Peter Palfrader.)
    - STREAM NEW events are generated for DNSPort requests and for tunneled
      directory connections. (Patch from Robert Hogan.)
    - New GETINFO address-mappings/* command to get address mappings with
      expiry information.  addr-mappings/* is now deprecated.
      (Patch from Tup.)

  o Minor features (IPv6):
    - Merge in some (as-yet-unused) IPv6 address manipulation code. (Patch
      from croup.)

  o Performance improvements (win32):
    - Use Critical Sections rather than Mutexes for synchronizing threads